fixing the webpage

--- a/index.html
+++ b/index.html
@@ -119,26 +119,31 @@ verification: </p>
 
 This library is distributed under the terms of the GNU Lesser General
 Public License version 3.
-The following archives should compile with Coq v8.4; a version of the
-library for trunk is available as a  <a
-href="http://coq.inria.fr/pylons/pylons/contribs/view/RelationAlgebra/trunk">Coq
-contribution</a>.
 <ul>
+  <li> Third release (2013 february 25th - bugfix):
+  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.2.tar.gz">
+  RelationAlgebra-1.2.tar.gz</a> (compiles with Coq v8.4pl1 and v8.4pl4).
   <li> Second release (2013 february 15th):
-  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.1.tar.bz2">
-  RelationAlgebra-1.1.tar.gz</a>.
+  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.1.tar.gz">
+  RelationAlgebra-1.1.tar.gz</a> (compiles with an earlier version of Coq v8.4).
   <li> First release (2012 december 16th):
-  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.0.tar.bz2">
+  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.0.tar.gz">
   RelationAlgebra-1.0.tar.gz</a>.
 </ul>
-
-<p> This library is partly described in this <a
-href="http://hal.archives-ouvertes.fr/docs/00/78/59/69/PDF/katcoq.pdf">extended abstract</a>.
-</p>
+Alternatively, the
+library is available as a Coq contribution for <a
+href="http://www.lix.polytechnique.fr/coq/pylons/coq/pylons/contribs/view/RelationAlgebra/trunk">trunk</a>
+and <a
+href="http://www.lix.polytechnique.fr/coq/pylons/coq/pylons/contribs/view/RelationAlgebra/v8.4">v8.4</a>.
 
 <h2 id="relw">Related papers or talks</h2>
 
 <ul>
+  <li> The tactic for KAT and its various applications are described
+  in <br>
+  <a href="http://dx.doi.org/10.1007/978-3-642-39634-2_15">
+  <em>Kleene Algebra with Tests and Coq Tools for while Programs</em></a>.
+  D. Pous, in Proc. ITP'13, LNCS 7998, July 2013.
   <li> A beta version of this library was presented at <a
   href="http://www.cl.cam.ac.uk/conference/ramics13/">RAMiCS</a>, September 2012: <a href="http://www.cl.cam.ac.uk/conference/ramics13/pous.pdf">slides</a>.
   <li> The generalisation to typed structures, and the untyping
@@ -437,5 +442,5 @@ of this library, clearing the ground for this subsequent work.
 <br><br>
 <hr>
 <address>http://perso.ens-lyon.fr/damien.pous/ra/</address>
-<!-- hhmts start -->Last modified: Fri Feb 15 15:35:43 CET 2013 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Thu Aug 28 11:29:19 CEST 2014 <!-- hhmts end -->
 </body> </html>
