updating webpage for the release

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ This library is distributed under the terms of the GNU Lesser General
 Public License version 3. 
 <ul>
   <li> Fifth release (2016 february 9th):
-  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.4.tar.gz">
-  RelationAlgebra-1.4.tar.gz</a> (compiles at least with Coq v8.5.0).
+  <a href="https://github.com/damien-pous/relation-algebra/archive/v1.4.tar.gz">
+  relation-algebra-1.4.tar.gz</a> (compiles at least with Coq v8.5.0).
   <li> Fourth release (2015 july 27th - bugfix):
   <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.3.tar.gz">
   RelationAlgebra-1.3.tar.gz</a> (compiles at least with Coq v8.4pl6).
@@ -137,10 +137,10 @@ Public License version 3.
   RelationAlgebra-1.0.tar.gz</a>.
 </ul>
 Alternatively, the
-library is available as a Coq contribution for <a
+library is available on <a href="https://github.com/damien-pous/relation-algebra">GitHub</a>, and as a Coq contribution for <a
 href="http://www.lix.polytechnique.fr/coq/pylons/coq/pylons/contribs/view/RelationAlgebra/trunk">trunk</a>
 and <a
-href="http://www.lix.polytechnique.fr/coq/pylons/coq/pylons/contribs/view/RelationAlgebra/v8.4">v8.4</a>.
+href="http://www.lix.polytechnique.fr/coq/pylons/coq/pylons/contribs/view/RelationAlgebra/v8.4">v8.4</a> (only version 1.3 of the library for the later).
 
 <h2 id="relw">Related papers or talks</h2>
 
