--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@ verification: </p>
 <h2 id="download">Download</h2>
 
 This library is distributed under the terms of the GNU Lesser General
-Public License version 3. 
+Public License version 3. It is available through opam, under the
+name <em>relation-algebra</em>. Alternatively, here are the various versions:
 <ul>
   <li> Fifth release (2016 february 9th):
   <a href="https://github.com/damien-pous/relation-algebra/archive/v1.4.tar.gz">
@@ -136,11 +137,12 @@ Public License version 3.
   <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.0.tar.gz">
   RelationAlgebra-1.0.tar.gz</a>.
 </ul>
-Alternatively, the
-library is available on <a href="https://github.com/damien-pous/relation-algebra">GitHub</a>, and as a Coq contribution for <a
-href="http://www.lix.polytechnique.fr/coq/pylons/coq/pylons/contribs/view/RelationAlgebra/trunk">trunk</a>
-and <a
-href="http://www.lix.polytechnique.fr/coq/pylons/coq/pylons/contribs/view/RelationAlgebra/v8.4">v8.4</a> (only version 1.3 of the library for the later).
+The library is also available
+on <a href="https://github.com/damien-pous/relation-algebra">GitHub</a>,
+and as a Coq contribution
+for <a href="http://www.lix.polytechnique.fr/coq/pylons/coq/pylons/contribs/view/RelationAlgebra/trunk">trunk</a>
+and <a href="http://www.lix.polytechnique.fr/coq/pylons/coq/pylons/contribs/view/RelationAlgebra/v8.4">v8.4</a>
+(version 1.3 of the library for the later).
 
 <h2 id="relw">Related papers or talks</h2>
 
