--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@ This library is distributed under the terms of the GNU Lesser General
 Public License version 3. It is available through opam, under the
 name <em>relation-algebra</em>. Alternatively, here are the various versions:
 <ul>
+  <li> Sixth release (2016 march 4th):
+  <a href="https://github.com/damien-pous/relation-algebra/archive/v1.5.tar.gz">
+  relation-algebra-1.5.tar.gz</a> (compiles at least with Coq v8.5.0).
   <li> Fifth release (2016 february 9th):
   <a href="https://github.com/damien-pous/relation-algebra/archive/v1.4.tar.gz">
   relation-algebra-1.4.tar.gz</a> (compiles at least with Coq v8.5.0).
