change log + webpage for release 1.6

--- a/index.html
+++ b/index.html
@@ -121,9 +121,12 @@ This library is distributed under the terms of the GNU Lesser General
 Public License version 3. It is available through opam, under the
 name <em>relation-algebra</em>. Alternatively, here are the various versions:
 <ul>
+  <li> Seventh release (2016 mai 10th):
+  <a href="https://github.com/damien-pous/relation-algebra/archive/v1.6.tar.gz">
+  relation-algebra-1.6.tar.gz</a> (compiles at least with Coq v8.5pl1).
   <li> Sixth release (2016 march 4th):
   <a href="https://github.com/damien-pous/relation-algebra/archive/v1.5.tar.gz">
-  relation-algebra-1.5.tar.gz</a> (compiles at least with Coq v8.5.0).
+  relation-algebra-1.5.tar.gz</a> (compiles with Coq v8.5.0).
   <li> Fifth release (2016 february 9th):
   <a href="https://github.com/damien-pous/relation-algebra/archive/v1.4.tar.gz">
   relation-algebra-1.4.tar.gz</a> (compiles at least with Coq v8.5.0).
