--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   &nbsp;&nbsp;. <a href="#doc:list">modules</a><br>
   &nbsp;&nbsp;. <a href="#doc:deps">dependencies</a><br>
   <a href="#notes">Notes</a><br>
+  <a href="#authors">Authors</a>
   <a href="#ack">Acknowledgements</a>
 </div>
 
@@ -121,7 +122,10 @@ This library is distributed under the terms of the GNU Lesser General
 Public License version 3. It is available through opam, under the
 name <em>relation-algebra</em>. Alternatively, here are the various versions:
 <ul>
-  <li> Seventh release (2016 mai 10th):
+  <li> Eighth release (TODO):
+  <a href="https://github.com/damien-pous/relation-algebra/archive/v1.7.tar.gz">
+  relation-algebra-1.7.tar.gz</a> (compiles at least with Coq v8.8.2).
+  <li> Seventh release (2016 may 10th):
   <a href="https://github.com/damien-pous/relation-algebra/archive/v1.6.tar.gz">
   relation-algebra-1.6.tar.gz</a> (compiles at least with Coq v8.5pl1).
   <li> Sixth release (2016 march 4th):
@@ -145,10 +149,7 @@ name <em>relation-algebra</em>. Alternatively, here are the various versions:
 </ul>
 The library is also available
 on <a href="https://github.com/damien-pous/relation-algebra">GitHub</a>,
-and as a Coq contribution
-for <a href="http://www.lix.polytechnique.fr/coq/pylons/coq/pylons/contribs/view/RelationAlgebra/trunk">trunk</a>
-and <a href="http://www.lix.polytechnique.fr/coq/pylons/coq/pylons/contribs/view/RelationAlgebra/v8.4">v8.4</a>
-(version 1.3 of the library for the later).
+and as a <a href="https://github.com/coq-contribs/relation-algebra">Coq contribution</a>.
 
 <h2 id="relw">Related papers or talks</h2>
 
@@ -447,6 +448,15 @@ reusing this code: </p>
   a different path here, we prove KA completeness in about 200 lines
   of definitions and 200 lines of proofs. This refactorisation was
   essential to reach KAT with a reasonable amount of efforts.
+</ul>
+
+<h2 id="authors">Authors</h2>
+
+<ul>
+  <li> Damien Pous (2012-), CNRS - LIP, ENS Lyon (UMR 5668), France
+  <li> Christian Doczkal (2018-), CNRS - LIP, ENS Lyon (UMR 5668), France
+  <li> Insa Stucke (2015-2016), Dpt of CS, University of Kiel, Germany
+  <li> Coq development team (2013-)
 </ul>
 
 <h2 id="ack">Acknowledgements</h2>
