--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ This library is distributed under the terms of the GNU Lesser General
 Public License version 3. It is available through opam, under the
 name <em>relation-algebra</em>. Alternatively, here are the various versions:
 <ul>
-  <li> Eighth release (TODO):
+  <li> Eighth release (2018 december 17th):
   <a href="https://github.com/damien-pous/relation-algebra/archive/v1.7.tar.gz">
   relation-algebra-1.7.tar.gz</a> (compiles at least with Coq v8.8.2).
   <li> Seventh release (2016 may 10th):
@@ -294,6 +294,7 @@ The coqdoc table of contents is <a href="html/toc.html">here</a>.</p>
     <li> <code><a href="html/RelationAlgebra.boolean.html">boolean</a></code>: Boolean trivial lattice, extended
     to a monoid.
     <li> <code><a href="html/RelationAlgebra.rel.html">rel</a></code>: heterogeneous binary relations
+    <li> <code><a href="html/RelationAlgebra.fhrel.html">fhrel</a></code>: heterogeneous binary relations over finite types
     <li> <code><a href="html/RelationAlgebra.lang.html">lang</a></code>: word languages (untyped)
     <li> <code><a href="html/RelationAlgebra.traces.html">traces</a></code>: trace languages (typed and untyped)
     <li> <code><a href="html/RelationAlgebra.glang.html">glang</a></code>: guarded string languages (typed and untyped)
