changelog and website for v1.7.1

--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@ This library is distributed under the terms of the GNU Lesser General
 Public License version 3. It is available through opam, under the
 name <em>relation-algebra</em>. Alternatively, here are the various versions:
 <ul>
+  <li> Ninth release (2019 february 8th):
+  <a href="https://github.com/damien-pous/relation-algebra/archive/v1.7.1.tar.gz">
+  relation-algebra-1.7.1.tar.gz</a> (compiles at least with Coq v8.9.0).
   <li> Eighth release (2018 december 17th):
   <a href="https://github.com/damien-pous/relation-algebra/archive/v1.7.tar.gz">
   relation-algebra-1.7.tar.gz</a> (compiles at least with Coq v8.8.2).
