webpage and opam file

--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@ This library is distributed under the terms of the GNU Lesser General
 Public License version 3. It is available through opam, under the
 name <em>relation-algebra</em>. Alternatively, here are the various versions:
 <ul>
+  <li> Eleventh release (2020 february 27th):
+  <a href="https://github.com/damien-pous/relation-algebra/archive/v1.7.3.tar.gz">
+  relation-algebra-1.7.3.tar.gz</a> (compiles at least with Coq v8.11).
   <li> Tenth release (2020 february 27th):
   <a href="https://github.com/damien-pous/relation-algebra/archive/v1.7.2.tar.gz">
   relation-algebra-1.7.2.tar.gz</a> (compiles at least with Coq v8.10.2).
