changelog, webpage, opam file

--- a/index.html
+++ b/index.html
@@ -248,9 +248,7 @@ and as a <a href="https://github.com/coq-contribs/relation-algebra">Coq contribu
   <li> Rewriting tactics:
   <ul>
     <li> <code>mrewrite</code>: rewriting modulo associativity of
-    composition (ad-hoc tactic);
-    <li> the library interfaces with <code>AAC_tactics</code>,
-    to obtain more powerful AC rewriting tools.
+    composition (ad-hoc tactic); more AC rewriting tools are available using the <code>AAC_tactics</code> library.
   </ul>  
   <li> Other tactics:
   <ul>
