--- a/index.html
+++ b/index.html
@@ -120,48 +120,9 @@ verification: </p>
 
 This library is distributed under the terms of the GNU Lesser General
 Public License version 3. It is available through opam, under the
-name <em>relation-algebra</em>. Alternatively, here are the various versions:
-<ul>
-  <li> Eleventh release (2020 october 20th):
-  <a href="https://github.com/damien-pous/relation-algebra/archive/v1.7.4.tar.gz">
-  relation-algebra-1.7.4.tar.gz</a> (compiles at least with Coq v8.11 & v8.12).
-  <li> Eleventh release (2020 february 27th):
-  <a href="https://github.com/damien-pous/relation-algebra/archive/v1.7.3.tar.gz">
-  relation-algebra-1.7.3.tar.gz</a> (compiles at least with Coq v8.11).
-  <li> Tenth release (2020 february 27th):
-  <a href="https://github.com/damien-pous/relation-algebra/archive/v1.7.2.tar.gz">
-  relation-algebra-1.7.2.tar.gz</a> (compiles at least with Coq v8.10.2).
-  <li> Ninth release (2019 february 8th):
-  <a href="https://github.com/damien-pous/relation-algebra/archive/v1.7.1.tar.gz">
-  relation-algebra-1.7.1.tar.gz</a> (compiles at least with Coq v8.9.0).
-  <li> Eighth release (2018 december 17th):
-  <a href="https://github.com/damien-pous/relation-algebra/archive/v1.7.tar.gz">
-  relation-algebra-1.7.tar.gz</a> (compiles at least with Coq v8.8.2).
-  <li> Seventh release (2016 may 10th):
-  <a href="https://github.com/damien-pous/relation-algebra/archive/v1.6.tar.gz">
-  relation-algebra-1.6.tar.gz</a> (compiles at least with Coq v8.5pl1).
-  <li> Sixth release (2016 march 4th):
-  <a href="https://github.com/damien-pous/relation-algebra/archive/v1.5.tar.gz">
-  relation-algebra-1.5.tar.gz</a> (compiles with Coq v8.5.0).
-  <li> Fifth release (2016 february 9th):
-  <a href="https://github.com/damien-pous/relation-algebra/archive/v1.4.tar.gz">
-  relation-algebra-1.4.tar.gz</a> (compiles at least with Coq v8.5.0).
-  <li> Fourth release (2015 july 27th - bugfix):
-  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.3.tar.gz">
-  RelationAlgebra-1.3.tar.gz</a> (compiles at least with Coq v8.4pl6).
-  <li> Third release (2013 february 25th - bugfix):
-  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.2.tar.gz">
-  RelationAlgebra-1.2.tar.gz</a> (compiles at least with Coq v8.4pl1 and v8.4pl4).
-  <li> Second release (2013 february 15th):
-  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.1.tar.gz">
-  RelationAlgebra-1.1.tar.gz</a> (compiles with an earlier version of Coq v8.4).
-  <li> First release (2012 december 16th):
-  <a href="http://perso.ens-lyon.fr/damien.pous/ra/RelationAlgebra-1.0.tar.gz">
-  RelationAlgebra-1.0.tar.gz</a>.
-</ul>
-The library is also available
-on <a href="https://github.com/damien-pous/relation-algebra">GitHub</a>,
-and as a <a href="https://github.com/coq-contribs/relation-algebra">Coq contribution</a>.
+name <em>coq-relation-algebra</em>, as well as on <a href="https://github.com/damien-pous/relation-algebra">GitHub</a>.
+(First release: 2012 december 16th, last release: 2020 december 29th.)
+
 
 <h2 id="relw">Related papers or talks</h2>
 
