model of setoid-preserving heterogeneous relations, (not yet robust with universes)

--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@ verification: </p>
 This library is distributed under the terms of the GNU Lesser General
 Public License version 3. It is available through opam, under the
 name <em>coq-relation-algebra</em>, as well as on <a href="https://github.com/damien-pous/relation-algebra">GitHub</a>.
-(First release: 2012 december 16th, last release: 2020 december 29th.)
 
 
 <h2 id="relw">Related papers or talks</h2>
@@ -264,6 +263,7 @@ The coqdoc table of contents is <a href="html/toc.html">here</a>.</p>
     <li> <code><a href="html/RelationAlgebra.boolean.html">boolean</a></code>: Boolean trivial lattice, extended
     to a monoid.
     <li> <code><a href="html/RelationAlgebra.rel.html">rel</a></code>: heterogeneous binary relations
+    <li> <code><a href="html/RelationAlgebra.srel.html">srel</a></code>: heterogeneous binary relations over setoids
     <li> <code><a href="html/RelationAlgebra.fhrel.html">fhrel</a></code>: heterogeneous binary relations over finite types (requires <code>ssreflect</code>)
     <li> <code><a href="html/RelationAlgebra.lang.html">lang</a></code>: word languages (untyped)
     <li> <code><a href="html/RelationAlgebra.traces.html">traces</a></code>: trace languages (typed and untyped)
