fix licensing issues

--- a/index.html
+++ b/index.html
@@ -118,9 +118,8 @@ verification: </p>
 
 <h2 id="download">Download</h2>
 
-This library is distributed under the terms of the GNU Lesser General
-Public License version 3. It is available through opam, under the
-name <em>coq-relation-algebra</em>, as well as on <a href="https://github.com/damien-pous/relation-algebra">GitHub</a>.
+This library is available through opam, under the name <em>coq-relation-algebra</em>, 
+as well as on <a href="https://github.com/damien-pous/relation-algebra">GitHub</a>.
 
 
 <h2 id="relw">Related papers or talks</h2>
