--- a/index.html
+++ b/index.html
@@ -328,12 +328,12 @@ The coqdoc table of contents is <a href="html/toc.html">here</a>.</p>
   </ul>
   <li>Applications to program verification
   <ul>
-    <li> <code><a href="html/RelationAlgebra.compiler_opts.html">compiler_opts</a></code>: verification of compiler
+    <li> <code><a href="html/compiler_opts.html">compiler_opts</a></code>: verification of compiler
     optimisations in KAT
     <li> <code><a
-  href="html/RelationAlgebra.paterson.html">paterson</a></code>:
+  href="html/paterson.html">paterson</a></code>:
   challenging equivalence of two flowchart schemes, due to Paterson
-    <li> <code><a href="html/RelationAlgebra.imp.html">imp</a></code>: formalisation of the IMP programming
+    <li> <code><a href="html/imp.html">imp</a></code>: formalisation of the IMP programming
     language, proving program equivalence using KAT, embedding of
     Hoare logic for partial correctness
   </ul>
